--- a/pages/index2.html
+++ b/pages/index2.html
@@ -15,16 +15,13 @@
 </head>
 
 <body>
-    <header>
-        <div class="container mt-3">
-            <div class="row align-items-center">
-                <div class="col-12 col-md-8">
+    <header class="login-header">
+        <div class="container-fluid">
+            <div class="d-flex justify-content-between align-items-center">
                     <img src="../assets/images/Link.png" alt="Logo" class="img-fluid">
-                </div>
-                <div
-                    class="nav-btn col-12 col-md-4  text-end d-flex justify-content-center justify-content-md-end align-items-center mt-3 mt-md-0">
-                    <p class="mb-0 me-2 d-none d-md-block">Already playing with ClickUp?</p>
-                    <a href="#" class="btn btn-primary">login</a>
+                <div class="nav-btn  text-end d-flex justify-content-center justify-content-md-end align-items-center mt-3 mt-md-0">
+                    <p class="mb-0 me-2">Don't have an account?</p>
+                    <a href="#" class="btn">Sign up</a>
                 </div>
             </div>
         </div>
