--- a/pages/multi-step.html
+++ b/pages/multi-step.html
@@ -11,453 +11,11 @@
     <link href="https://cdn.jsdelivr.net/npm/segoe-fonts@1.0.1/segoe-fonts.min.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="../assets/css/index4.css" />
+    <link rel="stylesheet" href="../assets/css/multistep.css">
 </head>
 
 <body>
-    <!-- Button trigger modal -->
 
-    <style>
-        .user-name {
-            font-size: 20px;
-            line-height: 30px;
-            font-weight: 600;
-            margin-bottom: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: #2A2E34;
-
-
-        }
-
-        .display-none {
-            display: none;
-        }
-
-        #multiStepModal,
-        #multiStepModal2,
-        #multiStepModal3,
-        #multiStepModal4 {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-            .modal-dialog {
-                max-width: 920px;
-
-                .modal-header {
-                    padding: 24px;
-                }
-
-                .modal-content {
-                    width: 920px;
-                    border-radius: 20px;
-                }
-
-                .modal-body {
-                    height: 479px;
-                }
-            }
-
-            .fieldset-heading {
-                font-weight: 900;
-                font-size: 40px;
-                line-height: 50px;
-                text-align: center;
-                width: 520px;
-                margin-bottom: 120px;
-                color: #2A2E34;
-                margin-left: auto;
-                margin-right: auto;
-                margin-top: 40px;
-                margin-bottom: 100px;
-            }
-
-            .gradient-border {
-                height: 4px;
-                width: 100;
-                margin: 0 24px;
-                background: linear-gradient(90deg, #6E56CF 0%, #4BC9FA 50%, #86EAD4 100%);
-            }
-
-            /* 
-            .fa-solid {
-                display: flex;
-                width: 180px;
-                height: 48px;
-                padding: 16px 70.55px 16px 70.53px;
-                justify-content: center;
-                align-items: center;
-                border: 1px solid;
-                border-radius: 8px;
-                box-shadow: 0px 0px 8px 0px rgba(237, 240, 242, 0.60);
-                cursor: pointer;
-
-
-            } */
-            .form1,
-            .form2,
-            .form3,
-            .form4,
-            .form5,
-            .form {
-                label {
-                    cursor: pointer;
-                    width: 180px;
-                    height: 48px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    position: relative;
-
-                    input[type="radio"],input[type="check"] {
-                        appearance: none;
-                        width: 180px;
-                        height: 48px;
-                        position: absolute;
-                        cursor: pointer;
-                    }
-                    input[type="check"] {
-                        width: 200px !important;
-                    }
-
-                    input[type="radio"]:checked~span {
-                        border: 1px solid #5C52ED;
-                        background-color: #5C52ED;
-                        color: white;
-                        box-shadow: 0px 6px 24px 0px #7F77F199 !important;
-                    }
-
-                    span {
-
-                        width: 100%;
-                        height: 100%;
-                        line-height: 48px !important;
-                        border: 1px solid #E8EAED;
-                        box-shadow: 0px 0px 8px 0px #EDF0F299;
-                        border-radius: 8px;
-                        text-align: center;
-                        font-size: 16px;
-                        font-weight: 400;
-                        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                        line-height: 16px;
-                    }
-                }
-
-            }
-        }
-
-        .form3,
-        .form4,
-        .form5 {
-            label {
-                width: auto !important;
-
-                input {
-                    width: auto !important;
-                }
-
-                span {
-
-                    padding: 0 20px;
-                }
-            }
-        }
-        .form6 {
-                label {
-                    cursor: pointer;
-                    width: 180px;
-                    height: 48px;
-
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-                    position: relative;
-                    border: 1px solid #E8EAED;
-                    align-items: center;
-                    border-radius: 8px;
-                    box-shadow: 0px 0px 8px 0px #EDF0F299;
-                    padding-left: 18px;
-                    padding-right: 18px;
-                    input[type="radio"],input[type="check"] {
-                        appearance: none;
-                        width: 180px;
-                        height: 48px;
-                        position: absolute;
-                        cursor: pointer;
-                    }
-                    input[type="checkbox"] {
-                        accent-color: #5C52ED;
-                    }
-
-                    input[type="radio"]:checked~span {
-                        border: 1px solid #5C52ED;
-                        background-color: #5C52ED;
-                        color: white;
-                        box-shadow: 0px 6px 24px 0px #7F77F199 !important;
-                    }
-
-                    span {
-                        font-size: 16px;
-                        font-weight: 400;
-                        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                        line-height: 16px;
-                    }
-                }
-
-            }
-        .form5 {
-            span {
-
-                padding: 0 30px !important;
-            }
-        }
-
-        .fieldset-heading2 {
-            font-weight: 700;
-            font-size: 40px;
-            line-height: 50px;
-            text-align: center;
-            width: 513px;
-            margin-bottom: 120px;
-            width: 329.83px;
-            margin-left: 270px;
-        }
-
-        .back {
-            position: absolute;
-            left: 24px;
-            margin-top: 2px;
-            gap: 8px;
-            bottom: 15px;
-        }
-
-        /* #multiStepModal2{
-        .fa-solid{
-            display: inline-flex;
-            height: 48px;
-            padding: 16px 21px;
-            justify-content: center;
-            align-items: center;
-        } */
-        .button_desgin1,
-        .button_desgin2,
-        .button_desgin6 {
-            justify-content: center;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-
-        .box2 {
-            display: flex;
-            /* width: 20%; */
-            /* padding: 16px 70.55px 16px 70.53px; */
-
-
-            padding: 10px 20px;
-            justify-content: center;
-            align-items: center;
-            border: 1px solid;
-            border-radius: 8px;
-            box-shadow: 0px 0px 8px 0px rgba(237, 240, 242, 0.60);
-            cursor: pointer;
-
-        }
-
-        .button_desgin3,
-        .button_desgin4,
-        .button_desgin5 {
-            justify-content: center;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-
-            width: 61%;
-            margin: 0 auto;
-        }
-
-        .button_desgin4,
-        .button_desgin5 {
-
-            width: 93% !important;
-        }
-
-        .box {
-            display: flex;
-            width: 20%;
-
-            justify-content: center;
-            align-items: center;
-            border: 1px solid;
-            border-radius: 8px;
-            box-shadow: 0px 0px 8px 0px rgba(237, 240, 242, 0.60);
-            cursor: pointer;
-
-        }
-        .form7{
-            input{
-               width: 274px;
-               height: 48px;
-               border:1px solid #D6D9DE;
-                font-size: 16px;
-                font-weight: 400;
-                line-height: 21.28px;
-                text-align: left;
-            }
-            .fieldset-heading{
-                margin-bottom:60px !important;
-            }
-            p{
-                margin: 0 auto;
-                margin-top: 90px;
-                font-size: 14px;
-                font-weight: 400;
-                line-height: 21px;
-                text-align: center;
-                color:#ADB3BD;
-                width: 288.73px;
-            }
-        }
-        #backButton{
-            width:99px;
-            height: 48px;
-            border-radius: 10px;
-            border:1px solid #D6D9DE;
-            box-shadow: 0px 4px 8px 0px #EDF0F299;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 20px;
-            text-align: center;
-            margin: 0;
-        }
-        #nextButton{
-            width: 91px;
-            height: 48px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 8px 0px #EDF0F299;
-            background-color: #5C52ED;
-            color:white;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 20px;
-            text-align: center;
-            margin: 0;
-        }
-        .modal-footer{
-            height: 80px;
-            padding:0 21px;
-        }
-        .modal-content-2{
-            width: auto !important;
-            overflow: hidden !important;
-            .image-block{
-                position:relative;
-                overflow: hidden !important;
-                .overlay{
-                    background: #00000073;
-                    height: 100%;
-                    width: 100%;
-                    position: absolute;
-                    top: 0;
-                }
-                .play-button{
-                    position: absolute;
-                    top:50%;
-                    left:50%;
-                    transform: translate(-50%, -50%);
-                    z-index: 2;
-                }
-            }
-            img{
-
-                margin-top: -10px !important;
-            }
-            .content{
-                margin:48px;
-                display: flex;
-                justify-content: center;
-                h1{
-                    font-size: 24px;
-                    font-weight: 600;
-                    line-height: 28px;
-                    text-align: center;
-                    margin-bottom: 12px;
-                }
-                p{
-                    font-size: 16px;
-                    font-weight: 400;
-                    line-height: 22px;
-                    text-align: center;
-                    width: 313px;
-                    margin: 0 auto;
-                    margin-bottom: 32px;
-                }
-                a{
-                    width: 160px;
-                    height: 32px;
-                    border-radius: 6px;
-                    border: 1px solid #E8EAED;
-                    text-decoration: none;
-                    font-size: 14px;
-                    font-weight: 400;
-                    line-height: 32px;
-                    text-align: center;
-                    color: #4F5762;
-                }
-            }
-        }
-        body{
-            overflow-x: hidden;
-        }
-        @media only screen and (min-width:768px) and (max-width:991px){
-            #multiStepModal{
-                .modal-dialog{
-                    max-width: 800px;
-                    .modal-content{
-                        width: 700px;
-                    }
-                }
-            }
-        }
-        @media only screen and (max-width:767px){
-            #multiStepModal{
-                .modal-dialog{
-                    max-width: 100% !important;
-                    width: 100%;
-                    justify-content: center;
-                    margin-left: 0 !important;
-                    .modal-content{
-                        max-width: 330px;
-                        .modal-header{
-                            padding: 8px;
-                            .user-name{
-                                font-size: 14px;
-                            }
-                        }
-                        .modal-body{
-                            height: auto;
-                            h1{
-                                width: auto !important;
-                                font-weight: 900;
-                                font-size: 22px;
-                                line-height: 33px;
-                                margin-top: 18px;
-                                margin-bottom: 18px;
-                            }
-                        }
-                        .gradient-border{
-                            margin-top: 10px;
-                        }
-                    }
-                    .modal-content-2{
-                        img{
-                            width: 100%;
-                        }
-                        .play-button{
-                            width: 43px !important;
-                        }
-                    }
-                }
-            }
-        }
-    </style>
     <!-- Modal -->
     <form action="">
         <div class="modal fade h-100 w-100" id="multiStepModal" tabindex="-1" role="dialog"
