--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,10 @@
     <header class="login-header">
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center">
+                <div >
                     <img src="../assets/images/Link.png" alt="Logo" class="img-fluid">
+                    <p class="mb-0 me-2 btn-2">The everything app for work</p>
+                </div>
                 <div class="nav-btn  text-end d-flex justify-content-center justify-content-md-end align-items-center mt-3 mt-md-0">
                     <p class="mb-0 me-2">Don't have an account?</p>
                     <a href="#" class="btn">Sign up</a>
