--- a/pages/index3.html
+++ b/pages/index3.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../assets/css/index.css">
+    <link rel="stylesheet" href="../assets/css/index3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
  
 </head>
@@ -18,8 +18,10 @@
                     <p class="mb-0 me-2 btn-2">The everything app for work</p>
                 </div>
                 <div class="nav-btn  text-end d-flex justify-content-center justify-content-md-end align-items-center mt-3 mt-md-0">
-                    <p class="mb-0 me-2">Don't have an account?</p>
-                    <a href="#" class="btn">Sign up</a>
+                    <p class="mb-0 me-2">Already playing with ClickUp?
+
+                    </p>
+                    <a href="#" class="btn">login</a>
                 </div>
             </div>
         </div>
@@ -32,27 +34,24 @@
             <div class="form-container">
                 <form action="">
                     <h3 class="text-center">Seconds to sign up!</h3>
-                        <img src="../assets/images/validate_email_82509917276_eee_9_b_0_a_8_a_6_d_7_a_1_c_8750_ed_png.png" class="justify-content-center" alt="" width="150px"> 
+                        <img src="../assets/images/validate_email_82509917276_eee_9_b_0_a_8_a_6_d_7_a_1_c_8750_ed_png.png" class="message_icon" alt="" width="150px"> 
                    
-                    <div class="inline-hr-container">
-                        <hr class="line_one">
-                        <span class="inline-text text-uppercase">OR</span>
-                        <hr class="line_two">
+                        <div class="mt-3 position-relative">
+                            <h3>We just emailed you.</h3>
+                         </div>
+                        <div class="mb-3 position-relative">
+                        <p class="fw-light">Please enter the code we emailed you. </p>
+                            <p>Confirmation code</p>
                     </div>
-                    <div class="mb-3 position-relative">
-                        <label for="email" class="form-label">Work Email</label>
-                        <img class="mail-icon" src="../assets/images/svg-sprite-global__cf-email.svg" alt="">
-                        <input type="email" name="email" id="email" class="form-control" placeholder="Enter your work email">
+                    <div class="mb-3 mt-5 position-relative d-flex justify-content-between">
+                        <hr class="w-25"> 
+                        <hr class="w-25"> 
+                        <hr class="w-25">
                     </div>
-                    <div class="mb-3 position-relative">
-                        <label for="password" class="form-label">Password</label>
-                        <img class="password-icon" src="../assets/images/Container.svg" alt="">
-                        <input type="password" name="password" id="password" class="form-control" placeholder="Enter password">
-                        <a href="#" class="forget-text">Forget password?</a>
-                    </div>
-                    <button type="submit" class="btn btn-primary login">Login</button>
+                    
+                    <button type="submit" class="btn btn-primary login">Verify</button>
                     <div class="login_SSO">
-                        <a href="#">or login with SSO</a>
+                        <a href="#">Resend code or login</a>
                     </div>
                     <div class="help text-center d-none shadow-lg rounded mb-5 d-md-block position-absolute">
                         <a href=""><img src="../assets/images/help.png" alt="">
