--- a/pages/index3.html
+++ b/pages/index3.html
@@ -43,10 +43,11 @@
                         <p class="fw-light">Please enter the code we emailed you. </p>
                             <p>Confirmation code</p>
                     </div>
-                    <div class="mb-3 mt-5 position-relative d-flex justify-content-between">
-                        <hr class="w-25"> 
-                        <hr class="w-25"> 
-                        <hr class="w-25">
+                    <div class="mb-3 mt-5 position-relative d-flex justify-content-between input_buttons">
+                      <input type="text"> <hr>
+                      <input type="text"><hr>
+                      <input type="text"><hr>
+                      <input type="text"><hr>
                     </div>
                     
                     <button type="submit" class="btn btn-primary login">Verify</button>
