--- a/copy.html
+++ b/copy.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../assets/css/index2.css">
+    <link rel="stylesheet" href=" assets/css/index2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,7 +19,7 @@
         <div class="container mt-3">
             <div class="row align-items-center">
                 <div class="col-12 col-md-8">
-                    <img src="../assets/images/Link.png" alt="Logo" class="img-fluid">
+                    <img src=" assets/images/Link.png" alt="Logo" class="img-fluid">
                 </div>
                 <div
                     class="nav-btn col-12 col-md-4  text-end d-flex justify-content-center justify-content-md-end align-items-center mt-3 mt-md-0">
@@ -32,12 +32,12 @@
     <main>
         <section>
             <div class="background_image">
-                <img src="../assets/images/Background.png" class="img-fluid w-100 mb-0" alt="">
+                <img src=" assets/images/Background.png" class="img-fluid w-100 mb-0" alt="">
             </div>
             <div class="form-container">
                 <form action="">
                     <h1 class="text-center"><b>Seconds to sign up!</b></h1>
-                    <img class="message justify-content-center  w-50 mb-3  " src="../assets/images/validate_email_82509917276_eee_9_b_0_a_8_a_6_d_7_a_1_c_8750_ed_png.png" alt="">
+                    <img class="message justify-content-center  w-50 mb-3  " src=" assets/images/validate_email_82509917276_eee_9_b_0_a_8_a_6_d_7_a_1_c_8750_ed_png.png" alt="">
 
                     <div class="mt-3 position-relative">
                         <h3>We just emailed you.</h3>
@@ -57,7 +57,7 @@
                     <br><br>
                   
                     <div class="help text-center d-none shadow-lg rounded mb-5 d-md-block position-absolute">
-                    <a href=""><img src="../assets/images/help.png" alt="">
+                    <a href=""><img src=" assets/images/help.png" alt="">
                     <p id="help_button" class="help_button text-white ">Help</p></a> 
                 </div>
                     <div class="login_SSO text-center  mt-2  ">
