--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../assets/css/index.css">
+    <link rel="stylesheet" href=" assets/css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
  
 </head>
@@ -50,7 +50,7 @@
        
             <div class="d-flex justify-content-between align-items-center">
                 <div >
-                    <img src="../assets/images/Link.png" alt="Logo" class="img-fluid">
+                    <img src=" assets/images/Link.png" alt="Logo" class="img-fluid">
                     <p class="mb-0 me-2 btn-2">The everything app for work</p>
                 </div>
                 <div class="nav-btn  text-end d-flex justify-content-center justify-content-md-end align-items-center mt-3 mt-md-0">
@@ -70,7 +70,7 @@
                 <form action="">
                     <h1 class="text-center"><b>Welcome back !</b></h1>
                     <a href="#" class="google_button btn btn-white position-relative">
-                        <img src="../assets/images/google.jpg" alt="" width="26"> Continue with Google
+                        <img src=" assets/images/google.jpg" alt="" width="26"> Continue with Google
                     </a>
                     <div class="inline-hr-container">
                         <hr class="line_one">
@@ -79,12 +79,12 @@
                     </div>
                     <div class="mb-3 position-relative">
                         <label for="email" class="form-label">Work Email</label>
-                        <img class="mail-icon" src="../assets/images/svg-sprite-global__cf-email.svg" alt="">
+                        <img class="mail-icon" src=" assets/images/svg-sprite-global__cf-email.svg" alt="">
                         <input type="email" name="email" id="email" class="form-control" placeholder="Enter your work email">
                     </div>
                     <div class="mb-3 position-relative">
                         <label for="password" class="form-label">Password</label>
-                        <img class="password-icon" src="../assets/images/Container.svg" alt="">
+                        <img class="password-icon" src=" assets/images/Container.svg" alt="">
                         <input type="password" name="password" id="password" class="form-control" placeholder="Enter password">
                         <a href="#" class="forget-text">Forget password?</a>
                     </div>
@@ -93,7 +93,7 @@
                         <a href="#">or login with SSO</a>
                     </div>
                     <div class="help text-center d-none shadow-lg rounded mb-5 d-md-block position-absolute">
-                        <a href=""><img src="../assets/images/help.png" alt="">
+                        <a href=""><img src=" assets/images/help.png" alt="">
                         <p id="help_button" class="help_button text-white">Help</p></a> 
                     </div>
                 </form>
