--- a/index3.html
+++ b/index3.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../assets/css/index3.css">
+    <link rel="stylesheet" href=" assets/css/index3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
  
 </head>
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center">
                 <div >
-                    <img src="../assets/images/Link.png" alt="Logo" class="img-fluid">
+                    <img src=" assets/images/Link.png" alt="Logo" class="img-fluid">
                     <p class="mb-0 me-2 btn-2">The everything app for work</p>
                 </div>
                 <div class="nav-btn  text-end d-flex justify-content-center justify-content-md-end align-items-center mt-3 mt-md-0">
@@ -27,14 +27,14 @@
         </div>
     </header>
     <div class="background_image">
-        <img src="../assets/images/Background.png" class="img-fluid w-100 mb-0" alt="">
+        <img src=" assets/images/Background.png" class="img-fluid w-100 mb-0" alt="">
     </div>
     <main class="align-items-end justify-content-center">
         <section>
             <div class="form-container">
                 <form action="">
                     <h3 class="text-center">Seconds to sign up!</h3>
-                        <img src="../assets/images/validate_email_82509917276_eee_9_b_0_a_8_a_6_d_7_a_1_c_8750_ed_png.png" class="message_icon" alt="" width="150px"> 
+                        <img src=" assets/images/validate_email_82509917276_eee_9_b_0_a_8_a_6_d_7_a_1_c_8750_ed_png.png" class="message_icon" alt="" width="150px"> 
                    
                         <div class="mt-3 position-relative">
                             <h3>We just emailed you.</h3>
@@ -55,7 +55,7 @@
                         <a href="#">Resend code or login</a>
                     </div>
                     <div class="help text-center d-none shadow-lg rounded mb-5 d-md-block position-absolute">
-                        <a href=""><img src="../assets/images/help.png" alt="">
+                        <a href=""><img src=" assets/images/help.png" alt="">
                         <p id="help_button" class="help_button text-white">Help</p></a> 
                     </div>
                 </form>
