--- a/index4.html
+++ b/index4.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../assets/css/index4.css">
+    <link rel="stylesheet" href=" assets/css/index4.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark text-white">
             <div class="container-fluid">
                 <a class="navbar-brand" href="javascript:void(0)">
-                    <img src="../assets/images/logo.png" alt="">
+                    <img src=" assets/images/logo.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -29,23 +29,23 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mt-2">
                             <button type="button" class="next_button" data-bs-toggle="modal" data-bs-target="#myModal">
-                                <img src="../assets/images/add.png" alt=""> Next
+                                <img src=" assets/images/add.png" alt=""> Next
                             </button>
                             
                         </li>
                         <li class="nav-item m-2">
-                            <img class="m-2" src="../assets/images/check.png" alt="">
-                            <img class="m-2" src="../assets/images/test.png" alt="">
-                            <img class="m-2" src="../assets/images/video.png" alt="">
-                            <img class="m-2" src="../assets/images/clock.png" alt="">
-                            <img class="m-2" src="../assets/images/documentation.png" alt="">
-                            <img class="m-2" src="../assets/images/menu.png" alt="">
+                            <img class="m-2" src=" assets/images/check.png" alt="">
+                            <img class="m-2" src=" assets/images/test.png" alt="">
+                            <img class="m-2" src=" assets/images/video.png" alt="">
+                            <img class="m-2" src=" assets/images/clock.png" alt="">
+                            <img class="m-2" src=" assets/images/documentation.png" alt="">
+                            <img class="m-2" src=" assets/images/menu.png" alt="">
                         </li>
                         <li class="nav-item">
                             <div class="dropdown">
                                 <button class="btn user_button p-2 rounded dropdown-toggle" id="dropdownMenuLink"
                                     data-bs-toggle="dropdown" aria-expanded="false">
-                                    <img src="../assets/images/user.png" alt="">
+                                    <img src=" assets/images/user.png" alt="">
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                     <li><a class="dropdown-item" href="#">Action</a></li>
@@ -75,7 +75,7 @@
                         </ul>
                     </h4>
                     <a href="#" class="down_close" data-bs-dismiss="modal" aria-label="Close">
-                        <img src="../assets/images/down_close.svg" alt="">
+                        <img src=" assets/images/down_close.svg" alt="">
                     </a>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
@@ -83,16 +83,16 @@
                 <div class="modal-body">
                     <!-- Modal body content goes here -->
                     <button class="btn_1 rounded bg-white">
-                        <img src="../assets/images/menu_list.svg" alt="">Personal List
+                        <img src=" assets/images/menu_list.svg" alt="">Personal List
                     </button>
                     <button class="btn_2 rounded bg-white mb-2">
-                        <img src="../assets/images/down_arrow.svg" alt="">
+                        <img src=" assets/images/down_arrow.svg" alt="">
                     </button>
                     <div class="modal_input mt-2 mb-4">
                         <input type="text" placeholder="Task name" name="name" id="name">
                     </div>
                     <div class="content_two">
-                        <img src="../assets/images/blank_doc.svg" alt="">
+                        <img src=" assets/images/blank_doc.svg" alt="">
                         <input type="text" placeholder="Add description">
                     </div>
                     <div class="content_three mb-2">
@@ -107,7 +107,7 @@
                 </div>
                 <!-- Modal Footer -->
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-white model_left"><img src="../assets/images/magic.svg" class="text-white" alt="">Templates</button>
+                    <button type="button" class="btn btn-white model_left"><img src=" assets/images/magic.svg" class="text-white" alt="">Templates</button>
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -121,36 +121,36 @@
             </div>
             <h5 class="ms-3">abubakar</h5>
             <button onclick="w3_close()" class="w3-bar-item ms-2 mt-n1">
-                <img src="../assets/images/menu2.svg" alt="">
+                <img src=" assets/images/menu2.svg" alt="">
             </button>
         </div>
         <div class="side_bar_content">
-            <a href="#" class="w3-bar-item w3-button"><img src="../assets/images/home.svg" alt=""> Home</a>
-            <a href="#" class="w3-bar-item w3-button"><img src="../assets/images/inbox.svg" alt="">Inbox</a>
-            <a href="#" class="w3-bar-item w3-button"><img src="../assets/images/doc.svg" alt="">Docs</a>
-            <a href="#" class="w3-bar-item w3-button"><img src="../assets/images/single.svg" alt="">Dashboard</a>
-            <a href="#" class="w3-bar-item w3-button"><img src="../assets/images/video.svg" alt="">Clips</a>
-            <a href="#" class="w3-bar-item w3-button"><img src="../assets/images/timer.svg" alt="">Timesheets</a>
-            <a href="#" class="w3-bar-item w3-button"><img src="../assets/images/more.svg" alt="">More</a>
+            <a href="#" class="w3-bar-item w3-button"><img src=" assets/images/home.svg" alt=""> Home</a>
+            <a href="#" class="w3-bar-item w3-button"><img src=" assets/images/inbox.svg" alt="">Inbox</a>
+            <a href="#" class="w3-bar-item w3-button"><img src=" assets/images/doc.svg" alt="">Docs</a>
+            <a href="#" class="w3-bar-item w3-button"><img src=" assets/images/single.svg" alt="">Dashboard</a>
+            <a href="#" class="w3-bar-item w3-button"><img src=" assets/images/video.svg" alt="">Clips</a>
+            <a href="#" class="w3-bar-item w3-button"><img src=" assets/images/timer.svg" alt="">Timesheets</a>
+            <a href="#" class="w3-bar-item w3-button"><img src=" assets/images/more.svg" alt="">More</a>
             <hr>
             <a href="#" class="w3-bar-item w3-button">Favorites ></a>
             <a href="#" class="w3-bar-item w3-button">Spaces</a>
-            <a href="#" class="w3-bar-item w3-button"><img src="../assets/images/sno.svg" alt="">Everything</a>
-            <a href="#" class="w3-bar-item w3-button"><img src="../assets/images/e.svg" alt="">Engineering</a>
-            <a href="#" class="w3-bar-item w3-button"><img src="../assets/images/d.svg" alt="">DCA</a>
-            <a href="#" class="w3-bar-item w3-button"><img src="../assets/images/m.svg" alt="">Machine Automation</a>
-            <a href="#" class="w3-bar-item w3-button"><img src="../assets/images/menu_more.svg" alt="">View all space</a>
-            <a href="#" class="w3-bar-item w3-button"><img src="../assets/images/add.svg" alt="">Create Space</a>
+            <a href="#" class="w3-bar-item w3-button"><img src=" assets/images/sno.svg" alt="">Everything</a>
+            <a href="#" class="w3-bar-item w3-button"><img src=" assets/images/e.svg" alt="">Engineering</a>
+            <a href="#" class="w3-bar-item w3-button"><img src=" assets/images/d.svg" alt="">DCA</a>
+            <a href="#" class="w3-bar-item w3-button"><img src=" assets/images/m.svg" alt="">Machine Automation</a>
+            <a href="#" class="w3-bar-item w3-button"><img src=" assets/images/menu_more.svg" alt="">View all space</a>
+            <a href="#" class="w3-bar-item w3-button"><img src=" assets/images/add.svg" alt="">Create Space</a>
         </div>
     </div>
 
     <div class="side_bar">
         <button class="w3-button text-dark bg-white menu_button w3-teal w3-xlarge" onclick="w3_open()">
-            <img src="../assets/images/menu2.svg" alt="">
+            <img src=" assets/images/menu2.svg" alt="">
         </button>
         
         <div class="d-flex nav_home position-absolute">
-            <img src="../assets/images/home.svg" alt="">
+            <img src=" assets/images/home.svg" alt="">
             <h5>Home</h5>
         </div>
     </div>
@@ -161,12 +161,12 @@
             <div class="col-sm-6 border p-3">
                 <div class="data_one">
                     <div class="d-flex align-items-center mb-2">
-                        <img src="../assets/images/dot.svg" alt="">
+                        <img src=" assets/images/dot.svg" alt="">
                         <h5 class="ms-2">Recents</h5>
                     </div>
                     <div class="edit_one_data d-flex">
-                        <img class="edit_one_data_img" src="../assets/images/size.png" alt="Size icon">
-                        <img src="../assets/images/menu_dot.png" alt="Menu dot icon">
+                        <img class="edit_one_data_img" src=" assets/images/size.png" alt="Size icon">
+                        <img src=" assets/images/menu_dot.png" alt="Menu dot icon">
                     </div>
                     <ul class="list-unstyled">
                         <li class="mb-2">
